--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main>
-      <h2> Превірка роботи з Git</h2>
+      <h2> Превірка роботи з Git!!!</h2>
       <section class="hero">
         <div class="hero__container">
           <div class="hero__block">
